--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/DLSU-CCAPDEV/2021T2-G56/issues"
   },
-  "homepage": "https://github.com/DLSU-CCAPDEV/2021T2-G56#readme"
+  "homepage": "https://github.com/DLSU-CCAPDEV/2021T2-G56#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^9.0.2",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.9"
+  }
 }
