--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HOSTNAME=localhost
-PORT=9090
-DB_URL=mongodb+srv://admin:adminpassword@cluster0.h1c1r.mongodb.net/catsallian-database?retryWrites=true&w=majority
+PORT                = 3000
+HOSTNAME            = localhost
+DB_URL              = mongodb+srv://admin:adminpassword@cluster0.h1c1r.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
