--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "ccapdev-2021t2-mc03",
+  "name": "catsallian",
   "version": "1.0.0",
-  "description": "Mini Challenge 3 for CCAPDEV2021T2",
+  "description": "A database for cats",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arvention/ccapdev-2021t2-mc03.git"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/arvention/ccapdev-2021t2-mc03/issues"
-  },
-  "homepage": "https://github.com/arvention/ccapdev-2021t2-mc03#readme",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
-    "dotenv": "^9.0.1",
+    "dotenv": "^9.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "hbs": "^4.1.2",
-    "mongoose": "^5.12.7"
+    "express-fileupload": "^1.2.1",
+    "googleapis": "^73.0.0",
+    "mongodb": "^3.6.6",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7"
   }
 }
