--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT                = 3000
 HOSTNAME            = localhost
-DB_URL              = mongodb+srv://admin:adminpassword@cluster0.h1c1r.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_URL              = mongodb+srv://admin:adminpassword@cluster0.h1c1r.mongodb.net/catsallian-database?retryWrites=true&w=majority
