--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "catsallian",
+  "name": "ccapdev-2021t2-mc03",
   "version": "1.0.0",
-  "description": "A database for cats",
-  "main": "server.js",
+  "description": "Mini Challenge 3 for CCAPDEV2021T2",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arvention/ccapdev-2021t2-mc03.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/arvention/ccapdev-2021t2-mc03/issues"
+  },
+  "homepage": "https://github.com/arvention/ccapdev-2021t2-mc03#readme",
   "dependencies": {
-    "async": "^3.2.0",
     "body-parser": "^1.19.0",
-    "dotenv": "^9.0.0",
+    "dotenv": "^9.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "googleapis": "^73.0.0",
-    "mongodb": "^3.6.6",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.7"
   }
 }
