--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^9.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7"
   }
